corrected the github link

--- a/bot.ini
+++ b/bot.ini
@@ -5,5 +5,5 @@ mailinglist=http://frodo.hserus.net/mailman/listinfo/ilugd
 facebook=https://www.facebook.com/ILUGD/
 twitter=https://twitter.com/ilugdelhi
 meetuplink=https://www.meetup.com/ILUGDelhi/
-github=https://github.com/ILUG
+github=https://github.com/ILUGD
 coc=https://github.com/ILUGD/Suggestions/issues/2
